<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="8dp"
	tools:context=".MainActivity">

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="8dp">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/tag"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/tag_label"
			android:inputType="textVisiblePassword"
			android:singleLine="true" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="8dp">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/door"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/door_label"
			android:inputType="number"
			android:singleLine="true" />
	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">

		<Button
			android:id="@+id/activate_door"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/activate_door" />

		<Button
			android:id="@+id/open_door"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/open_door" />

		<Button
			android:id="@+id/close_door"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/close_door" />
	</LinearLayout>

	<View
		android:id="@+id/divider"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:background="?android:attr/listDivider" />

	<ListView
		android:id="@+id/access_data"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

</LinearLayout>
